# VueParts

./: .eslintrc.json  .gitignore  .prettierrc  .vercelignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
Carousel/: app.js  index.html
components/: AuthWrapper.tsx  Header.tsx  ProtectedRoute.tsx
db/: docker-compose.yml
lib/: prisma.ts
modal/: app.js  index.html  style.css
pages/: _app.tsx  index.tsx  mypage.tsx
pages/api/auth/: [...nextauth].ts
pages/api/bookmark/add/: [id].ts
pages/articles/: [id].tsx  index.tsx
pages/auth/: login.tsx
prisma/: schema.prisma  seed.ts
src/: main.rs
src/app/: page.tsx
templates/: index.html
