[package]
name = "microcms_blog2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1.14"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
actix-files = "0.6.6"

[profile.release]
opt-level = 3
